# deepracer-custom-car

./: README.md  versions.json
.devcontainer/: bashrc
.devcontainer/humble/: Dockerfile
.devcontainer/noble/: Dockerfile
.devcontainer/noble-amd64/: Dockerfile
build_scripts/: build-core.sh  build-libcamera.sh  build-packages.sh  build-prerequisites-humble.sh  build-tensorflow.sh  list-packages.sh  upload-packages.sh  versions.json
build_scripts/files/common/: aws-deepracer-core-postinst  deepracer-core.service  deepracer_launcher.py  nginx.default  nginx_install_certs.sh  setup.py  start_ros.sh
build_scripts/files/common/error/: 500.html  main.css
build_scripts/files/dr/: 01-netcfg.yaml  10-manage-wifi.conf  led_gpio.sh  otg_eth.sh  pwm.sh  tpm2-initramfs-hook  tpm2-unseal-keyscript
build_scripts/files/pi/: aws-deepracer-core-postinst
build_scripts/patches/: aws-deepracer-camera-pkg.patch  aws-deepracer-camera-pkg.timing.patch  aws-deepracer-ctrl-pkg.patch  aws-deepracer-ctrl-pkg.timing.patch  aws-deepracer-inference-pkg.patch  aws-deepracer-interfaces-pkg.timing.patch  aws-deepracer-navigation-pkg.timing.patch  aws-deepracer-sensor-fusion-pkg.patch  aws-deepracer-servo-pkg.patch  aws-deepracer-servo-pkg.timing.patch  aws-deepracer-status-led-pkg.rpi.patch  aws-deepracer-webserver-pkg.patch
docs/: apt.md  build_sw.md  flash-2404.md  raspberry_pi.md  upgrade-2004.md
install_scripts/aws-20.04/: aws_deepracer-community.list
install_scripts/aws-24.04/: aws_deepracer-community.list  create-image.sh  install-deepracer.sh  install-prerequisites.sh  rc.local
install_scripts/rpi-24.04/: install-deepracer.sh  install-prerequisites.sh
install_scripts/rpi4-22.04/: aws_deepracer-community.list  install-deepracer.sh  install-prerequisites.sh
install_scripts/rpi5-24.04/: install-deepracer.sh  install-prerequisites.sh  rc.local
src/: .rosinstall-foxy
src/aws-deepracer-community-bag-log-pkg/: NOTICE  README.md
src/aws-deepracer-community-bag-log-pkg/bag_log_pkg/: CMakeLists.txt  package.xml
src/aws-deepracer-community-bag-log-pkg/bag_log_pkg/bag_log_pkg/: bag_log_node.py  constants.py
src/aws-deepracer-community-bag-log-pkg/bag_log_pkg/include/bag_log_pkg/: bag_log_node.hpp
src/aws-deepracer-community-bag-log-pkg/bag_log_pkg/launch/: bag_log_cpp_launch.py  bag_log_pkg_launch.py
src/aws-deepracer-community-bag-log-pkg/bag_log_pkg/resource/: bag_log_pkg
src/aws-deepracer-community-bag-log-pkg/bag_log_pkg/src/: bag_log_node.cpp
src/aws-deepracer-community-bag-log-pkg/bag_log_pkg/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/aws-deepracer-community-diffdrive-motor-pkg/: CMakeLists.txt  README.md  package.xml
src/aws-deepracer-community-diffdrive-motor-pkg/include/diffdrive_motor_pkg/: calibration_manager.hpp  differential_drive_controller.hpp  differential_drive_node.hpp  motor_constants.hpp  motor_manager.hpp  pwm.hpp  silent_led_handler.hpp
src/aws-deepracer-community-diffdrive-motor-pkg/launch/: diffdrive_motor_pkg_launch.py
src/aws-deepracer-community-diffdrive-motor-pkg/src/: calibration_manager.cpp  differential_drive_controller.cpp  differential_drive_node.cpp  motor_manager.cpp  pwm.cpp  silent_led_handler.cpp
src/aws-deepracer-community-diffdrive-motor-pkg/test/: test_calibration_manager.cpp  test_differential_drive_controller.cpp  test_motor_manager.cpp  test_motor_pwm_basic.cpp
src/aws-deepracer-community-logging-pkg/: LICENSE  NOTICE  README.md
src/aws-deepracer-community-logging-pkg/logging_pkg/: CMakeLists.txt  package.xml
src/aws-deepracer-community-logging-pkg/logging_pkg/include/logging_pkg/: bag_log_node.hpp
src/aws-deepracer-community-logging-pkg/logging_pkg/launch/: bag_log_cpp_launch.py  bag_log_pkg_launch.py
src/aws-deepracer-community-logging-pkg/logging_pkg/logging_pkg/: bag_log_node.py  constants.py
src/aws-deepracer-community-logging-pkg/logging_pkg/resource/: logging_pkg
src/aws-deepracer-community-logging-pkg/logging_pkg/src/: bag_log_node.cpp
src/aws-deepracer-community-logging-pkg/logging_pkg/test/: __init__.py  test_copyright.py  test_flake8.py  test_pep257.py
src/aws-deepracer-device-info-pkg/device_info_pkg/device_info_pkg/: constants.py  device_info_node.py  device_status_node.py  gpio_module.py  ring_buffer.py
src/aws-deepracer-inference-pkg/inference_pkg/: CMakeLists.txt
src/aws-deepracer-inference-pkg/inference_pkg/include/inference_pkg/: intel_ov_inference_eng.hpp  tflite_inference_eng.hpp
src/aws-deepracer-inference-pkg/inference_pkg/src/: inference_node.cpp  intel_ov_inference_eng.cpp  tflite_inference_eng.cpp
src/aws-deepracer-interfaces-pkg/deepracer_interfaces_pkg/msg/: LatencyMeasureMsg.msg
src/aws-deepracer-launcher/deepracer_launcher/: package.xml
src/aws-deepracer-launcher/deepracer_launcher/launch/: deepracer_launcher.py
src/aws-deepracer-model-optimizer-pkg/model_optimizer_pkg/model_optimizer_pkg/: constants.py  model_optimizer_node.py
src/aws-deepracer-navigation-pkg/deepracer_navigation_pkg/: CMakeLists.txt
src/aws-deepracer-navigation-pkg/deepracer_navigation_pkg/include/deepracer_navigation_pkg/: deepracer_navigation_node.hpp
src/aws-deepracer-servo-pkg/servo_pkg/: CMakeLists.txt
src/aws-deepracer-servo-pkg/servo_pkg/include/servo_pkg/: servo_mgr.hpp
src/aws-deepracer-servo-pkg/servo_pkg/src/: pwm.cpp  servo_mgr.cpp
src/aws-deepracer-status-led-pkg/status_led_pkg/status_led_pkg/: constants.py  gpio_module.py  gpiod_module.py  led_control.py
src/aws-deepracer-systems-pkg/deepracer_systems_pkg/deepracer_systems_pkg/deepracer_systems_scripts_module/: deepracer_systems_scripts_node.py
src/aws-deepracer-systems-pkg/deepracer_systems_pkg/deepracer_systems_pkg/otg_module/: otg_config.py  otg_control_node.py
src/aws-deepracer-webserver-pkg/webserver_pkg/webserver_pkg/: calibration.py  constants.py  device_info_api.py  login.py  time_api.py  webserver.py  webserver_publisher_node.py  wifi_settings.py
test/utils/: model_inspector.py
utils/: usb-build.ps1
utils/custom_image/: seal_and_luksChangeKey.sh  tpm2_pre_seal.sh  usb_flash.sh
